@@ -126,6 +126,12 @@
                 <li>Several improvements in runner management</li>
                 <li>Added icons to the sidebar</li>
                 <li>Experimantal support for Bottles installers</li>
+                <li>Better support for Breeze theme</li>
+                <li>Browse programs path</li>
+                <li>Generate Bottles compatible desktop entries for programs installed trought Bottles installers</li>
+                <li>Visual feedback during a state restoring</li>
+                <li>Add external executable to the program list</li>
+                <li>Toggle update date on bottles list</li>
                 <li>Chinese (Simplified) translations thanks to @Yuzaihhhh and @sr093906</li>
                 <li>Japanese translations thanks to @jatin-cbs</li>
                 <li>Hungarian translations thanks to @ovari</li>
