@@ -30,6 +30,12 @@ com.usebottles.bottles (2021.7.28-treviso) precise; urgency=low
   * Several improvements in runner management
   * Added icons to the sidebar
   * Experimantal support for Bottles installers
+  * Better support for Breeze theme
+  * Browse programs path
+  * Generate Bottles compatible desktop entries for programs installed trought Bottles installers
+  * Visual feedback during a state restoring
+  * Add external executable to the program list
+  * Toggle update date on bottles list
   * Chinese (Simplified) translations thanks to @Yuzaihhhh and @sr093906
   * Japanese translations thanks to @jatin-cbs
   * Hungarian translations thanks to @ovari
